# SB_Trabalho_Pratico-1

./: .binary_writer.c.swo  .binary_writer.c.swp  .entrada.swp  Anotacoes  CMakeLists.txt  a.out  arq.bin.n_binario  binary_writer.c  entrada  main.c
Assembly/: a.out  assembler.c  assembly  b.out
Binary_Writer/: b  binary_writer.c  entrada (cópia)
Linker/: linker.c
Simulator/: entrada  simulator  simulator.c
Testes/: .main.a.swo  .main.a.swp  a.out  assembler  linker  simulator
programs/: loop
